--- a/_posts/2018-05-16-manifest-example.html
+++ b/_posts/2018-05-16-manifest-example.html
@@ -5,6 +5,7 @@ date:   2018-05-16 17:27:05 +0100
 categories: pwa
 tags: pwa manifest json
 highlighter: rouge
+permalink: manifest
 ---
 
 {% highlight javascript %}
