--- a/_posts/2018-05-16-manifest-example.html
+++ b/_posts/2018-05-16-manifest-example.html
@@ -2,11 +2,12 @@
 layout: post
 title:  PWA mainfest example
 date:   2018-05-16 17:27:05 +0100
+permalink: manifest
 categories: pwa
 tags: pwa manifest json
-highlighter: rouge
-permalink: manifest
 ---
+
+<p>Default manifest file. </p>
 
 {% highlight javascript %}
 {% include manifest.json %}
