js structure updated

--- a/_posts/2018-05-16-manifest-example.html
+++ b/_posts/2018-05-16-manifest-example.html
@@ -7,9 +7,9 @@ categories: pwa
 tags: pwa manifest json
 ---
 
-<p>Default manifest file. </p>
+<p>Example:</p>
 
-{% highlight javascript %}
-{% include manifest.json %}
+{% highlight json %}
+{% include json/manifest.json %}
 {% endhighlight %}
 
