Post details added

--- a/_posts/2018-05-16-manifest-example.html
+++ b/_posts/2018-05-16-manifest-example.html
@@ -7,7 +7,7 @@ categories: pwa
 tags: pwa manifest json
 ---
 
-<p>Example:</p>
+<p>manifest.json preivew</p>
 
 {% highlight json %}
 {% include json/manifest.json %}
