--- a/_posts/2018-05-18-register-service-worker.html
+++ b/_posts/2018-05-18-register-service-worker.html
@@ -7,7 +7,7 @@ categories: pwa
 tags: pwa manifest json sw service-worker
 ---
 
-<p>Example:</p>
+<p>regsiter-service-worker.js example preview</p>
 
 {% highlight javascript %}
 {% include js/register-service-worker.js %}
