--- a/_posts/2018-05-21-default-service-worker.html
+++ b/_posts/2018-05-21-default-service-worker.html
@@ -1,19 +1,13 @@
 ---
 layout: post
-title:  Default PWA example
-date:   2018-05-22
-permalink: default-pwa
+title:  Default service worker example
+date:   2018-05-21
+permalink: default-service-worker
 categories: pwa
-tags: pwa manifest json service-worker
+tags: pwa json service-worker
 ---
 
-<p>A prototype of a simple manifest file and a vanilla js service worker.</p>
-
-<h4>Manifest file used on this page.</h4>
-
-{% highlight json %}
-{% include json/manifest.json %}
-{% endhighlight %}
+<p>A prototype of a simple vanilla js service worker.</p>
 
 <h4>Standard service worker resitration method.</h4>
 
