--- a/_posts/2018-05-22-basic-webbox.html
+++ b/_posts/2018-05-22-basic-webbox.html
@@ -1,16 +1,16 @@
 ---
 layout: post
-title: Basic Webbox worker setup
+title: Basic Workbox worker setup
 date:   2018-05-22
 permalink: basic-webbox
-service-worker: webbox-worker.js
+service-worker: workbox-worker.js
 categories: pwa
-tags: pwa manifest json service-worker webbox
+tags: pwa manifest json service-worker workbox
 ---
 
-<p>A basic setup of the webbox library.</p>
+<p>A basic setup of the workbox library.</p>
 
-<h4>Webbox worker setup.</h4>
+<h4>Workbox worker setup.</h4>
 
 {% highlight javascript %}
 {% include js/{{ page.service-worker }} %}
