--- a/offline.html
+++ b/offline.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-permaloink: /404.html
+permalink: /offline.html
 ---
 
 <style type="text/css" media="screen">
@@ -18,8 +18,8 @@ permaloink: /404.html
 </style>
 
 <div class="container">
-  <h1>404</h1>
+  <h1>No juice!</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Network not available.</strong></p>
+  <p>Please try again later.</p>
 </div>
