Created offline page and made it display when there is no network connection. the page automatically reloads when there is a change in the network status.

--- a/offline.html
+++ b/offline.html
@@ -11,15 +11,18 @@ permalink: /offline.html
   }
   h1 {
     margin: 30px 0;
-    font-size: 4em;
+    font-size: 2em;
     line-height: 1;
     letter-spacing: -1px;
+  }
+  img {
+    width: 75%;
+    margin: 0 auto;
+    display: block;
   }
 </style>
 
 <div class="container">
-  <h1>No juice!</h1>
-
-  <p><strong>Network not available.</strong></p>
-  <p>Please try again later.</p>
+    <h1>Oops, please check your internet connection</h1>
+    <img src="../assets/images/doh.jpg"></img>
 </div>
