Changed js file to be included dynamically and included online-status-reload code in post

--- a/_posts/2018-05-21-default-service-worker.html
+++ b/_posts/2018-05-21-default-service-worker.html
@@ -20,3 +20,9 @@ tags: pwa json service-worker
 {% include js/service-worker.js %}
 {% endhighlight %}
 
+<h4>Page reload on netwrok status change</h4>
+
+{% highlight javascript %}
+{% include js/online-status-reload.js %}
+{% endhighlight %}
+
