Created seperate instance of service worker for offline page. Included offline-message in the header.

--- a/offline.html
+++ b/offline.html
@@ -22,7 +22,7 @@ permalink: /offline.html
   }
 </style>
 
-<div class="container">
+<div class="container" id="offline-page">
     <h1>Oops, please check your internet connection</h1>
     <img src="../assets/images/doh.jpg"></img>
 </div>
